syntax = "proto3";

option csharp_namespace = "ITIMenofia.Grpc.Client.Protos";

service OrderDetailsService{
  rpc PostOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest{
  string  UserId=1;
  string ProductId=2;
  int32 Quantity=3;
  double amount=4;
}
message OrderResponse{
  bool Done=1;
  string Message=2;
}
